[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/simple_asset_studio/MainInterface.gd" type="Script" id=1]

[node name="MainInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="."]
margin_left = 160.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
text = "+ New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="Button" parent="."]
margin_left = 240.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 320.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
disabled = true
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAs" type="Button" parent="."]
margin_left = 400.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
disabled = true
text = "Save As"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filters" type="MenuButton" parent="."]
margin_left = 480.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 30.0
disabled = true
text = "Filters"
items = [ "Convert to Grayscale", null, 0, false, false, 0, 0, null, "", false, "Invert Colors", null, 0, false, false, 2, 0, null, "", false, "Tint", null, 0, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Workspace" type="Panel" parent="."]
show_behind_parent = true
margin_left = 160.0
margin_top = 40.0
margin_right = 1200.0
margin_bottom = 780.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="TextureRect" parent="Workspace"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="Panel" parent="."]
show_behind_parent = true
margin_left = 10.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tools"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 24.0
text = "Tools"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Tools"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 108.0
grow_horizontal = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Paint" type="Button" parent="Tools/Container"]
margin_right = 120.0
margin_bottom = 20.0
toggle_mode = true
pressed = true
action_mode = 0
text = "Paint"

[node name="Fill" type="Button" parent="Tools/Container"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 44.0
toggle_mode = true
action_mode = 0
text = "Fill"

[node name="BrushSettings" type="Panel" parent="."]
show_behind_parent = true
margin_left = 10.0
margin_top = 170.0
margin_right = 150.0
margin_bottom = 690.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 24.0
text = "Brush Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 80.0
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorHistory" type="HBoxContainer" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 87.0
margin_right = 70.0
margin_bottom = 103.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color1" type="ColorRect" parent="BrushSettings/ColorHistory"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="TextureButton" parent="BrushSettings/ColorHistory/Color1"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color2" type="ColorRect" parent="BrushSettings/ColorHistory"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="TextureButton" parent="BrushSettings/ColorHistory/Color2"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Color3" type="ColorRect" parent="BrushSettings/ColorHistory"]
margin_left = 52.0
margin_right = 68.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="TextureButton" parent="BrushSettings/ColorHistory/Color3"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Color4" type="ColorRect" parent="BrushSettings/ColorHistory"]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="TextureButton" parent="BrushSettings/ColorHistory/Color4"]
margin_right = 16.0
margin_bottom = 16.0

[node name="Color5" type="ColorRect" parent="BrushSettings/ColorHistory"]
margin_left = 92.0
margin_right = 108.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
color = Color( 1, 0, 1, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="TextureButton" parent="BrushSettings/ColorHistory/Color5"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color6" type="ColorRect" parent="BrushSettings/ColorHistory"]
margin_left = 112.0
margin_right = 128.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="TextureButton" parent="BrushSettings/ColorHistory/Color6"]
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeLabel" type="Label" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 110.0
margin_right = 60.0
margin_bottom = 124.0
text = "Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpacityLabel" type="Label" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 150.0
margin_right = 60.0
margin_bottom = 164.0
text = "Opacity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardnessLabel" type="Label" parent="BrushSettings"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 190.0
margin_right = 60.0
margin_bottom = 204.0
text = "Hardness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="HSlider" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 130.0
margin_right = 60.0
margin_bottom = 146.0
min_value = 1.0
max_value = 50.0
step = -1.0
value = 1.0
exp_edit = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opacity" type="HSlider" parent="BrushSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 170.0
margin_right = 60.0
margin_bottom = 186.0
max_value = 1.0
step = -1.0
value = 1.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hardness" type="HSlider" parent="BrushSettings"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 210.0
margin_right = 60.0
margin_bottom = 226.0
max_value = 1.0
step = -1.0
value = 1.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageSettings" type="Panel" parent="."]
show_behind_parent = true
margin_left = 10.0
margin_top = 700.0
margin_right = 150.0
margin_bottom = 780.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ImageSettings"]
margin_top = 10.0
margin_right = 140.0
margin_bottom = 24.0
text = "Image Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="CheckButton" parent="ImageSettings"]
margin_left = 10.0
margin_top = 40.0
margin_right = 130.0
margin_bottom = 64.0
text = "Filter"

[node name="StraightLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 648.5, 378.5, 326.298, 773.289 )
width = 2.0
default_color = Color( 0.164706, 0.164706, 0.164706, 1 )
begin_cap_mode = 2
end_cap_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="NewDialog" type="ConfirmationDialog" parent="."]
margin_left = -560.0
margin_top = 240.0
margin_right = -280.0
margin_bottom = 428.0
popup_exclusive = true
window_title = "New Texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="NewDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -132.0
margin_top = 8.0
margin_right = 132.0
margin_bottom = 152.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PathLabel" type="Label" parent="NewDialog/Options"]
margin_right = 264.0
margin_bottom = 14.0
text = "Path:"

[node name="Path" type="LineEdit" parent="NewDialog/Options"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 42.0
text = "res://new_texture.png"
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="SizeLabel" type="Label" parent="NewDialog/Options"]
margin_top = 46.0
margin_right = 264.0
margin_bottom = 60.0
text = "Size:"

[node name="X" type="HBoxContainer" parent="NewDialog/Options"]
margin_top = 64.0
margin_right = 264.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewDialog/Options/X"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "X:"

[node name="Value" type="SpinBox" parent="NewDialog/Options/X"]
margin_left = 16.0
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
min_value = 1.0
value = 64.0
allow_greater = true
suffix = "px"

[node name="Y" type="HBoxContainer" parent="NewDialog/Options"]
margin_top = 92.0
margin_right = 264.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="NewDialog/Options/Y"]
margin_top = 5.0
margin_right = 11.0
margin_bottom = 19.0
text = "Y:"

[node name="Value" type="SpinBox" parent="NewDialog/Options/Y"]
margin_left = 15.0
margin_right = 95.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
min_value = 1.0
value = 64.0
allow_greater = true
suffix = "px"

[node name="KeepAspect" type="CheckBox" parent="NewDialog/Options"]
margin_top = 120.0
margin_right = 264.0
margin_bottom = 144.0
pressed = true
text = "Keep Aspect"

[node name="OpenDialog" type="FileDialog" parent="."]
margin_left = -630.527
margin_top = 507.369
margin_right = -150.527
margin_bottom = 787.369
popup_exclusive = true
window_title = "Open File(s)"
mode = 1
filters = PoolStringArray( "*.png ; Images" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsDialog" type="ConfirmationDialog" parent="."]
margin_left = -560.0
margin_top = 90.0
margin_right = -280.0
margin_bottom = 180.0
popup_exclusive = true
window_title = "Save As"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="SaveAsDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLabel" type="Label" parent="SaveAsDialog/Options"]
margin_right = 264.0
margin_bottom = 14.0
text = "Path:"

[node name="Path" type="LineEdit" parent="SaveAsDialog/Options"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 42.0
caret_blink = true
caret_blink_speed = 0.5

[node name="OverwriteDialog" type="ConfirmationDialog" parent="."]
margin_left = -1067.0
margin_top = 105.0
margin_right = -665.0
margin_bottom = 195.0
popup_exclusive = true
dialog_text = "A file aleady exists at that location! Are you sure you want to overwrite it?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="Label" parent="OverwriteDialog"]
visible = false
margin_left = 8.0
margin_top = 39.0
margin_right = 394.0
margin_bottom = 54.0
__meta__ = {
"_editor_description_": ""
}

[node name="QueueSetup" type="CheckBox" parent="OverwriteDialog"]
visible = false
margin_left = 8.0
margin_top = 39.0
margin_right = 394.0
margin_bottom = 63.0

[node name="FilterDialogs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TintDialog" type="ConfirmationDialog" parent="FilterDialogs"]
margin_left = -991.0
margin_top = 461.0
margin_right = -758.0
margin_bottom = 587.0
window_title = "Tint"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="FilterDialogs/TintDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 225.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorLabel" type="Label" parent="FilterDialogs/TintDialog/Options"]
margin_right = 217.0
margin_bottom = 14.0
text = "Color:"

[node name="Color" type="ColorPickerButton" parent="FilterDialogs/TintDialog/Options"]
margin_top = 18.0
margin_right = 217.0
margin_bottom = 38.0
color = Color( 1, 0, 0, 1 )
edit_alpha = false

[node name="StrengthLabel" type="Label" parent="FilterDialogs/TintDialog/Options"]
margin_top = 42.0
margin_right = 217.0
margin_bottom = 56.0
text = "Strength:"

[node name="Strength" type="HSlider" parent="FilterDialogs/TintDialog/Options"]
margin_top = 60.0
margin_right = 217.0
margin_bottom = 76.0
max_value = 1.0
step = -1.0
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="SaveAs" to="." method="_on_SaveAs_pressed"]
[connection signal="toggled" from="ImageSettings/Filter" to="." method="_on_Filter_toggled"]
[connection signal="confirmed" from="NewDialog" to="." method="_on_NewDialog_confirmed"]
[connection signal="value_changed" from="NewDialog/Options/X/Value" to="." method="_on_size_text_changed" binds= [ true ]]
[connection signal="value_changed" from="NewDialog/Options/Y/Value" to="." method="_on_size_text_changed" binds= [ false ]]
[connection signal="confirmed" from="OpenDialog" to="." method="_on_OpenDialog_confirmed"]
[connection signal="confirmed" from="SaveAsDialog" to="." method="_on_SaveAs_confirmed"]
[connection signal="confirmed" from="OverwriteDialog" to="." method="_on_OverwriteDialog_confirmed"]
[connection signal="confirmed" from="FilterDialogs/TintDialog" to="." method="_on_TintDialog_confirmed"]
